--- a/Changelog.txt
+++ b/Changelog.txt
@@ -5,3 +5,6 @@
 1.0.2
     Add Support for Kopernicus, Kopernicus overwrites solar panel modules so without these the contracts will not activate.
 	Changed URL for .version check to github
+
+1.0.2.1
+	Updated version info for 1.4.1
