--- a/Changelog.txt
+++ b/Changelog.txt
@@ -18,3 +18,6 @@
 
 1.0.3.1
 	Removed extra .version file
+    
+1.0.5
+    Fixed contracts.  Now requires SpaceTuxSA to be installed for the contracts to work
